<resources>
    <string name="app_name">Unit9Menus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Study mates</string>
    <string name="nav_header_subtitle">Find your study partner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="action_add">Add</string>
    <string name="action_Delete">Delete</string>
    <string name="action_sms">SMS</string>
    <string name="action_email">Email</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_add">Add a mate</string>
    <string name="nav_delete">Delete a mate</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sms">Text your mates</string>
    <string name="nav_email">Email your mates</string>
</resources>
