<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/nav_add" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/nav_delete" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_sms"
            android:icon="@drawable/ic_sms_black_24dp"
            android:title="@string/nav_sms" />
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/nav_email" />
    </group>
</menu>
